--- a/my-shop/public/index.html
+++ b/my-shop/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TechShop - Інтернет магазин</title>
+  <title>TEST IT - Інтернет магазин</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="/style.css">
 </head>
@@ -12,8 +12,8 @@
   <header class="header">
     <div class="container">
       <div class="logo">
-        <img src="/images/logo.png" alt="TechShop" class="logo-img">
-        <span class="logo-text">TechShop</span>
+        <img src="/images/logo.png" alt="TEST IT" class="logo-img">
+        <span class="logo-text">TEST IT</span>
       </div>
       
       <div class="search">
@@ -45,9 +45,9 @@
       
       <ul class="nav-links">
         <li><a href="/">Головна</a></li>
-        <li><a href="#">Новинки</a></li>
-        <li><a href="#">Акції</a></li>
-        <li><a href="#">Про нас</a></li>
+        <li><a href="#">Контакти</a></li>
+        <li><a href="#">Знайти нас на карті</a></li>
+        <li><a href="#">Гарантія</a></li>
       </ul>
     </div>
   </nav>
@@ -67,7 +67,7 @@
       <div class="footer-section">
         <h3>Контакти</h3>
         <p>+380 12 345 6789</p>
-        <p>info@techshop.ua</p>
+        <p>info@testit.ua</p>
       </div>
       <div class="footer-section">
         <h3>Графік роботи</h3>
