--- a/my-shop/public/contacts.html
+++ b/my-shop/public/contacts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакти | TEST IT</title>
+    <title>Контакти | VolzStore</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -12,8 +12,8 @@
     <nav>
         <div class="container">
             <a href="/" class="logo">
-                <img src="/images/logo.png" alt="TEST IT Logo">
-                <span>TEST IT</span>
+                <img src="/images/logo.png" alt="VolzStore Logo">
+                <span>VolzStore</span>
             </a>
             <div class="menu-toggle"><i class="fas fa-bars"></i></div>
             <div class="menu">
