--- a/my-shop/public/index.html
+++ b/my-shop/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechTrend | Головна</title>
+    <title>VolzStore | Головна</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -58,8 +58,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between">
             <!-- Логотип -->
             <a href="/" class="flex items-center">
-                <img src="/images/logo.png" alt="TechTrend" class="h-10 w-auto">
-                <span class="ml-2 text-xl font-bold text-gray-800">TechTrend</span>
+                <img src="/images/logo.png" alt="VolzStore" class="h-10 w-auto">
+                <span class="ml-2 text-xl font-bold text-gray-800">VolzStore</span>
             </a>
 
             <!-- Пошук -->
@@ -107,7 +107,7 @@
     <!-- Банер -->
     <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
         <div class="bg-gradient-to-r from-blue-500 to-blue-700 text-white rounded-lg p-8 text-center">
-            <h1 class="text-3xl font-bold mb-2">TechTrend – Твій магазин техніки!</h1>
+            <h1 class="text-3xl font-bold mb-2">VolzStore – Твій магазин техніки!</h1>
             <p class="text-lg">Найкращі гаджети та аксесуари за доступними цінами.</p>
             <a href="/categories" class="mt-4 inline-block bg-orange-500 text-white py-2 px-4 rounded-lg hover:bg-orange-600">
                 Переглянути категорії
@@ -138,7 +138,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
-                    <h3 class="text-lg font-bold">TechTrend</h3>
+                    <h3 class="text-lg font-bold">VolzStore</h3>
                     <p class="mt-2 text-gray-400">Інновації для твого життя.</p>
                 </div>
                 <div>
@@ -150,7 +150,7 @@
                 </div>
                 <div>
                     <h3 class="text-lg font-bold">Контакти</h3>
-                    <p class="mt-2 text-gray-400">Email: support@techtrend.ua</p>
+                    <p class="mt-2 text-gray-400">Email: support@volzstore.ua</p>
                     <p class="text-gray-400">Телефон: +380 123 456 789</p>
                 </div>
             </div>
