--- a/my-shop/public/search.html
+++ b/my-shop/public/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechTrend | Пошук</title>
+    <title>VolzStore | Пошук</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -50,8 +50,8 @@
     <header class="header">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between">
             <a href="/" class="flex items-center">
-                <img src="/images/logo.png" alt="TechTrend" class="h-10 w-auto">
-                <span class="ml-2 text-xl font-bold text-gray-800">TechTrend</span>
+                <img src="/images/logo.png" alt="VolzStore" class="h-10 w-auto">
+                <span class="ml-2 text-xl font-bold text-gray-800">VolzStore</span>
             </a>
             <div class="flex-1 mx-4 relative hidden md:block">
                 <input id="search-input" type="text" placeholder="Пошук товарів..." 
@@ -97,7 +97,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
-                    <h3 class="text-lg font-bold">TechTrend</h3>
+                    <h3 class="text-lg font-bold">VolzStore</h3>
                     <p class="mt-2 text-gray-400">Інновації для твого життя.</p>
                 </div>
                 <div>
